[tool.poetry]
name = "kaeliumbot"
version = "0.1.0"
description = ""
authors = ["emanuelcima <emanuel.cima@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytelegrambotapi = "^4.12.0"
pydantic-settings = "^2.0.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
local = "kaeliumbot.local:main"
